# TerraNex

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json
ai_agent/: package-lock.json  package.json
ai_agent/src/: agent.ts  streaming_client.ts
ai_agent/src/tools/: intent_signer.ts
deploy/: README.md  docker-compose.yml
orchestrator/: Cargo.toml  Dockerfile
orchestrator/src/: grpc_stream.rs  kafka_producer.rs  main.rs  solver_auction.rs
orchestrator/static/: index.html
programs/nexus_core/: Cargo.toml
programs/nexus_core/src/: error.rs  lib.rs
programs/nexus_core/src/instructions/: delegate.rs  initialize.rs  mod.rs  resolve.rs  submit_intent.rs
programs/nexus_core/src/state/: intent.rs  mod.rs  position.rs  session.rs  vault.rs
